# mobile-manipulator

./: .gitignore  .gitmodules  README.md  requirements.txt  setup.cfg
examples/: claude_helpers.py  ex_testing_meshes.py  ex_testing_mjspec.py  ex_testing_procthor.py  ex_testing_robothor.py  ex_testing_stuff.py
mobile/: __init__.py  environment.py
resources/ranger-mini-v2/: mobile-manipulator.xml  ranger-mini-v2.urdf  ranger-mini-v2.xml  scene.xml  xarm7.xml
tools/: ycb_downloader.py
