[metadata]
name = mobile
version = 0.0.1
description = An environment wrapper for the Ranger Mini 2 mobile base
long_description = file: README.md
long_description_content_type = text/markdown
author = Wilbert Pumacay
author_email = wilbert.pumacay@ucsp.edu.pe
license = MIT License
url = https://github.com/wpumacay/mobile-manipulator

[options]
packages = find:
python_requires = >=3.9

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    venv

max-line-length = 80